# 3D-Simple-Geometry-Operation

./: README.md  gui.hpp  input1.data  readme.md  shaders.h
src/: CMakeLists.txt  gui.cpp  imgui.ini  main.cpp
